# adaptarAndPorts

./: .dockerignore  ARQUITECTURA.md  CLI.md  CRATES.md  Cargo.toml  DEMOSTRACION.md  DEVELOPER.md  Dockerfile  GUIA_RAPIDA.md  README.md  SWAGGER.md  docker-compose.yml
api-server/: Cargo.toml
api-server/src/: main.rs
cli-app/: Cargo.toml
cli-app/src/: main.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: empleado_repository_in_memory.rs  lib.rs  repository_in_memory.rs  sala_repository_memory.rs
crates/api-rest/: Cargo.toml
crates/api-rest/src/: dtos.rs  lib.rs  mappers.rs  openapi.rs  routes.rs
crates/api-rest/src/handlers/: disponibilidad.rs  empleados.rs  mod.rs  reservas.rs  salas.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  cli_args.rs  commands.rs  lib.rs  response.rs
crates/domain/: Cargo.toml
crates/domain/examples/: tabla_disponibilidad.rs
crates/domain/src/: disponibilidad.rs  empleado.rs  lib.rs  reserva.rs  sala.rs  slot.rs
crates/ports/: Cargo.toml
crates/ports/src/: lib.rs
crates/ports/src/in/: empleado_service.rs  mod.rs  reserva_service.rs  sala_service.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: handlers.rs  lib.rs  routes.rs  templates.rs
crates/web-ui/static/: style.css
crates/web-ui/templates/: base.html  disponibilidad.html  empleado_form.html  empleados.html  index.html  reservas.html  salas.html  salas_form.html
example/reservas-app/: Cargo.toml
example/reservas-app/src/: main.rs
reservas-app/: Cargo.toml
reservas-app/src/: main.rs
src/: main.rs
src/adapters/: mod.rs  repository_in_memory.rs
src/application/: mod.rs
src/domain/: mod.rs  reserva.rs
src/ports/: mod.rs
