[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/ports",
    "crates/application",
    "crates/adapters",
    "reservas-app",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
