[package]
name = "reservas-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reservas-api"
path = "src/main.rs"

[dependencies]
# El binario usa todas las capas
reservas-domain = { path = "../crates/domain" }
reservas-ports = { path = "../crates/ports" }
reservas-application = { path = "../crates/application" }
reservas-adapters = { path = "../crates/adapters" }

tokio = { workspace = true }
chrono = { workspace = true }
