[package]
name = "reservas-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "reservas_cli"
path = "src/lib.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Chrono para fechas
chrono = { version = "0.4", features = ["serde"] }

# Colores en terminal
colored = "2.0"

# Tablas en terminal
tabled = "0.16"
log = "0.4.28"
