[package]
name = "reservas-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "reservas_cli"
path = "src/lib.rs"

[dependencies]
# CLI framework
clap = { version = "4.5.53", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "blocking"] }

# Serialización
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Chrono para fechas
chrono = { version = "0.4.42", features = ["serde"] }

# Colores en terminal
colored = "3.0.0"

# Tablas en terminal
tabled = "0.20"
log = "0.4.28"
