[package]
name = "web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web
axum = "0.7"

# Templates HTML
askama = "0.12"
askama_axum = "0.4"

# Async runtime
tokio = { workspace = true }

# Nuestras capas
reservas-domain = { path = "../domain" }
reservas-ports = { path = "../ports" }

# Manejo de fechas
chrono = { workspace = true, features = ["serde"] }

# Servir archivos estáticos
tower-http = { version = "0.6", features = ["fs"] }

# Serialización para formularios
serde = { version = "1.0", features = ["derive"] }
